--- a/package.json
+++ b/package.json
@@ -20,8 +20,15 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "gatsby": "^2.32.3",
+    "gatsby": "^2.32.8",
+    "gatsby-image": "^3.0.0",
+    "gatsby-plugin-sharp": "^3.0.0",
+    "gatsby-remark-images": "^4.0.0",
+    "gatsby-source-filesystem": "^2.11.1",
+    "gatsby-transformer-remark": "^2.16.1",
+    "gatsby-transformer-sharp": "^3.0.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "require-dir": "^1.2.0"
   }
 }
